--- a/index.html
+++ b/index.html
@@ -160,18 +160,27 @@
           </div>
 
           <div class="col-lg-6">
-              <p>
-                  Experience spanning 10+ years in coordination and management roles in film production, private country club operations, non-profits, and SME workflow automations. Recently upgraded my skills by completing an AEC career diploma in Full Stack Development (2023-24), and returned to complete my previous BFA Film Production at Concordia University (2025) — open to project and operations roles from May 2025.
-              </p>
 
-              <div class="mt-6">
-                  <p>
-                      Here are some things about me that may not have made it onto the CV. I previously worked in theatre as an actor in Canada and the UK. I took up martial arts at a young age, taught for a several years, and did performance work on motion capture for Ubisoft (Rocky Balboa). After working as a performer for 7 years, I studied film production at Concordia University focusing on production management and student leadership roles over 3 years (organizing a 5-day film festival, workshops, and industry partnerships; faculty board committee roles for Cinema Chair Hiring, Department Appraisal Committee). On my free time: I train in amateur boxing, I love playing music (currently classical guitar and starting on Arabic oud), and I volunteer as a dog foster.
-                  </p>
-                  <p>
-                      I bring all of these experiences with me, along with training in full stack development, to my work on projects and operations. I am consistently learning new skills and figuring out how to solve new problems — taking a course or workshop in my spare time. Reach out if you have a project you're working on or are looking for dynamic solutions for your business or team — looking forward to talking with you!
-                  </p>
-              </div>
+            <p>Experience spanning 10+ years in coordination and management roles in film production, private country club operations, 
+                non-profits, and SME workflow automations. Recently upgraded my skills by completing an AEC career diploma in Full Stack 
+                Development (2023-24), and returned to complete my previous BFA Film Production at Concordia University (2025) — open to 
+                project and operations roles from May 2025.
+            </p>
+            <br>
+            <p>Here are some things about me that may not have made it onto the CV. I previously worked in theatre as an actor in Canada 
+                and the UK. I took up martial arts at a young age, taught for a several years, and did performance work on motion capture 
+                for Ubisoft (Rocky Balboa). After working as a performer for 7 years, I studied film production at Concordia University 
+                focusing on production management and student leadership roles over 3 years (organizing a 5-day film festival, workshops, 
+                and industry partnerships; faculty board committee roles for Cinema Chair Hiring, Department Appraisal Committee). 
+                On my free time: I train in amateur boxing, I love playing music (currently classical guitar and starting on Arabic oud), 
+                and I volunteer as a dog foster.
+            </p>
+            <br>
+            <p>I bring all of these experiences with me, along with training in full stack development, to my work on projects and operations. 
+                I am consistently learning new skills and figuring out how to solve new problems — taking a course or workshop in my spare 
+                time. Reach out if you have a project you're working on or are looking for dynamic solutions for your business or team — 
+                looking forward to talking with you!
+            </p>
           </div>
       </div>
   </div>
