--- a/index.html
+++ b/index.html
@@ -51,33 +51,22 @@
 </nav>
 
 
-<!--
-  Hero section with improved spacing and visual separation.
-  - Added Bootstrap spacing utilities for vertical breathing room.
-  - Italicized the first hero_desc.
-  - Inserted a centered vertical line between the two hero_desc elements, with buffer spacing.
-  - All content is centered and responsive.
-  - Inline comments explain each step.
--->
+
 <section class="bgimage" id="home">
   <div class="container-fluid">
     <div class="row justify-content-center">
       <div class="col-lg-8 col-md-10 col-sm-12 col-xs-12 hero-text text-center">
         <!-- Main hero title with generous bottom margin -->
-        <h2 class="hero_title mb-xxl-5">Hi, I'm Dustin.</h2>
-        
+<!--         <h2 class="hero_title mb-xxl-5">Hi, I'm Dustin.</h2>
+         -->
         <!--  Italicized -->
         <h2 class="hero_desc mb-xl-4" style="font-style: italic; font-weight: 100; letter-spacing: 0.5px;">
           Bridging creative skills and operational clarity
         </h2>
         
-        <!-- Centered vertical line with buffer above and below -->
         <div class="d-flex flex-column align-items-center mb-4">
-          <!-- A -->
           <div class="circle-label mb-2">A</div>
-          <!-- Vertical line SVG -->
           <svg width="16" height="150" viewBox="0 0 16 150" fill="none" xmlns="http://www.w3.org/2000/svg" class="my-1">
-            <!-- Vertical line -->
             <line x1="8" y1="0" x2="8" y2="135" stroke="#bac0dd" stroke-width="3" opacity="0.4"/>
             <!-- Arrowhead -->
             <polygon points="8,150 16,135 0,135" fill="#bac0dd" opacity="0.7"/>
@@ -96,7 +85,7 @@
         </p>
 
         <h3>
-          <a href="#about" class="btn btn-grad">Go on...</a>
+          <a href="#about" class="btn btn-grad">Continue...</a>
         </h3>
       </div>
     </div>
