minor desc change

--- a/index.html
+++ b/index.html
@@ -167,8 +167,7 @@
             <br>
             <p>I bring all of these experiences with me, along with training in full stack development, to my work on projects and operations. 
                 I am consistently learning new skills and figuring out how to solve new problems — taking a course or workshop in my spare 
-                time. Reach out if you have a project you're working on or are looking for dynamic solutions for your business or team — 
-                looking forward to talking with you!
+                time. Feel free to reach out if you have a project you're working on or are looking for dynamic solutions for your business or team.
             </p>
           </div>
       </div>
